# tagged-expense-manager

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  release_template.md
.github/workflows/: aux_node_branch_quality.yml  aux_rust_branch_quality.yml  push_main.workflow.yml
desktop-application/: .prettierignore  package-lock.json  package.json
desktop-application/.storybook/: main.ts  preview.ts
desktop-application/src/: App.css  App.tsx
desktop-application/src-tauri/: .env.example  Cargo.toml  tauri.conf.json
lib/: Cargo.toml
lib/migrations/2024-07-27-211135_create_expenses/: up.sql
lib/migrations/2024-08-11-103449_create_categories/: up.sql
lib/migrations/2024-08-11-104240_create_categories_hierarchy/: down.sql
lib/src/: database.rs  error.rs  importers.rs  lib.rs  schema.rs
lib/src/database/: utils.rs
lib/src/database/entities/: expenses.rs
lib/src/database/repositories/: expenses.rs
lib/src/database/utils/: connection.rs
lib/src/error/: get_failure.rs  insert_failure.rs
lib/src/importers/: importer_definition.rs  santander_pt.rs
lib/src/services/: expenses.rs
migrations/2024-07-27-211135_create_expenses/: up.sql
migrations/2024-08-11-103449_create_categories/: up.sql
migrations/2024-08-11-103702_create_expenses_categories/: down.sql  up.sql
migrations/2024-08-11-104240_create_categories_hierarchy/: up.sql
mock-data/basic-functionality/: categories.csv  expenses.csv
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/database/: categories.rs  custom_types.rs  expenses.rs  repositories.rs
src/models/: categories.rs  expense_entry.rs  expense_price.rs  expense_tag.rs  expenses.rs
src/utils/: timestamp_serializer.rs
terminal-cli/: .env.example  Cargo.toml
terminal-cli/src/: app.rs  event.rs  main.rs  (+3 more)
(+19 files in other folders)
