[package]
name = "tagged-expense-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
uuid = "1.9.1"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[[bin]]
name = "manager_cli"
doc = false