[package]
name = "tagged-expense-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
uuid = "1.9.1"
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.15", features = ["derive"] }
clap_derive = "4.5.13"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.64"

[[bin]]
name = "import_mock_data"
doc = false

[[bin]]
name = "run_importer"
doc = false
